Secciones de texto del landing page.

--- a/themes/default/templates/_header.ejs
+++ b/themes/default/templates/_header.ejs
@@ -33,7 +33,7 @@
         <div class="container-fluid">
             <a class="navbar-brand text-primary" href="/">
                 <img src="<%= site.directory %>/<%= site.metadata.logo_image %>" alt="" height="30" class="d-inline-block align-text-top">
-                CCV
+                <%= site.metadata.short_title %>
               </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
