Arreglo de layout del banner.

--- a/themes/default/templates/index.ejs
+++ b/themes/default/templates/index.ejs
@@ -1,7 +1,7 @@
 <%- include("_header") %>
 
     <div class="main-header-img p-5 mb-4" style="background-image: url(/<%= site.metadata.banner_image %>);">
-        <div class="container py-5 d-flex justify-content-start">
+        <div class="container py-5">
             <h1 class="display-5 fw-bold text-light">
                 <%= page.metadata.title %>
             </h1>
