Se muestran los enlaces "ver mas..." que faltaban.

--- a/themes/default/templates/index.ejs
+++ b/themes/default/templates/index.ejs
@@ -143,6 +143,10 @@
                     <% } %>
                 </div>
 
+                <p class="text-end w-100 mt-5">
+                    <a class="link-primary" href="/productos">Ver todos los productos &RightArrow;</a>
+                </p>
+
                 <div class="m-5">
                     <h2 class="text-center">Nuestros Creadores de Videojuegos</h2>
                 </div>
@@ -179,6 +183,10 @@
 
                 <% } %>
             </div>
+
+            <p class="text-end w-100 mt-5">
+                <a class="link-primary" href="/creadores">Ver todos los creadores &RightArrow;</a>
+            </p>
 
     </div> <!-- containter -->
 
