Se emigra al generador de sitios: staticojs.

--- a/themes/default/templates/_footer.ejs
+++ b/themes/default/templates/_footer.ejs
@@ -10,7 +10,7 @@
                 <p>
                     Síguenos en: 
                     <ul>
-                        <%- site.metadata.social_accounts.map(info => `<li><a href='${info.url}'>${info.name}</a></li>`).join("\n") %>
+                        <%- site.social_accounts.map(info => `<li><a href='${info.url}'>${info.name}</a></li>`).join("\n") %>
                     </ul>
                 </p>
                 <p>Contribuye a esta plataforma en <a href="#">nuestra cuenta de GitHub</a>.</p>
