--- a/themes/default/templates/_page.ejs
+++ b/themes/default/templates/_page.ejs
@@ -1,12 +1,12 @@
-<div class="container-fluid p-5 mb-5 text-light main-header-img" style="background-image: url(/<%= site.metadata.banner_image %>);">
+<div class="container-fluid p-5 mb-5 text-light main-header-img" style="background-image: url(/<%= site.banner_image %>);">
 
     <div class="mb-4">
         <div class="container">
             <h1 class="display-5 fw-bold text-light text-center">
-                <%= page.metadata.title %>
+                <%= $page.title %>
             </h1>
             <p class="fs-5 text-white text-center">
-                <%= page.metadata.description %>
+                <%= $page.description %>
             </p>
         </div>
     </div>
@@ -14,6 +14,6 @@
 
 <div class="container mt-2 page-content">
 
-    <%- page.content %>
+    <%- $page.$content %>
     
 </div>
