--- a/themes/default/templates/blog.ejs
+++ b/themes/default/templates/blog.ejs
@@ -4,22 +4,22 @@
 
         <div class="container">
             <h1 class="display-5 fw-bold text-center">
-                <%= page.metadata.title %>
+                <%= $page.title %>
             </h1>
         </div>
     </div>
 
     <div class="container text-center">
-        <img class="img-fluid" src="<%= page.metadata.image %>">
+        <img class="img-fluid" src="<%= $page.image %>">
     </div>
 
     <div class="p-3"></div>
 
     <div class="container mt-5 page-content">
 
-        <%- page.content %>
+        <%- $page.$content %>
 
-        <p class="text-muted"><%= page.metadata.date %></p>
+        <p class="text-muted"><%= $page.date %></p>
 
     </div>
 
