--- a/themes/default/templates/creador-list.ejs
+++ b/themes/default/templates/creador-list.ejs
@@ -1,6 +1,6 @@
 <%- include("_header") %>
 
-    <%- include("../_page") %>
+    <%- include("_page") %>
 
         <br>
 
@@ -8,25 +8,25 @@
 
             <div class="row">
 
-                <% page.children.forEach(child=> { %>
+                <% $page.$pages.forEach(child=> { %>
 
                     <div class="card border-0 bg-transparent d-flex text-center" style="width:20em;">
 
                         <div class="card-body">
 
-                            <img src="/<%= child.directory %>/<%= child.metadata.image %>" class="profile-img">
+                            <img src="/<%= child.$path %>/<%= child.image %>" class="profile-img">
                         </div>
                         <div class="card-body p-0">
                             <h3>
-                                <a href="/<%= child.directory %>">
-                                    <%= child.metadata.title %>
+                                <a href="/<%= child.$path %>">
+                                    <%= child.title %>
                                 </a>
                             </h3>
                         </div>
 
                         <div class="card-body p-0">
                             <div class="text-muted fs-6">
-                                <%= child.metadata.description %>
+                                <%= child.description %>
                             </div>
                         </div>
                     </div>
