--- a/themes/default/templates/estudio-list.ejs
+++ b/themes/default/templates/estudio-list.ejs
@@ -1,6 +1,6 @@
 <%- include("_header") %>
 
-    <%- include("../_page") %>
+    <%- include("_page") %>
 
         <br>
 
@@ -8,19 +8,19 @@
 
             <div class="card-group">
 
-                <% for(const producto of page.children) { %>
+                <% $page.$pages.forEach(child=> { %>
 
                     <div class="studio-card card m-2 mb-5 border-0 bg-transparent">
-                        <img src="/<%= producto.directory %>/<%= producto.metadata.image %>" class="img-fluid">
+                        <img src="/<%= child.$path %>/<%= child.image %>" class="img-fluid">
                         <div class="card-body">
-                          <h5 class="card-title"><%= producto.metadata.title %></h5>
-                          <p class="card-text"><%= producto.metadata.description %></p>
+                          <h5 class="card-title"><%= child.title %></h5>
+                          <p class="card-text"><%= child.description %></p>
                         </div>
                         <div class="card-footer bg-transparent border-0">
-                            <a href="/<%= producto.directory %>" class="btn btn-info">Muéstrame más &RightArrow;</a>
+                            <a href="/<%= child.$path %>" class="btn btn-primary">Los quiero conocer &RightArrow;</a>
                         </div>
                       </div>                    
-                <% } %>
+                <% }); %>
             
             </div> <!-- group -->
 
