--- a/themes/default/templates/estudio.ejs
+++ b/themes/default/templates/estudio.ejs
@@ -4,35 +4,35 @@
         
         <div class="studio-main-card card border-0 bg-transparent">
             
-            <img src="/<%= page.directory %>/<%= page.metadata.image %>" class="img-fluid">
+            <img src="/<%= $page.$path %>/<%= $page.image %>" class="img-fluid">
 
             <div class="card-body">
                 <h1 class="card-title text-primary">
-                    <%= page.metadata.title %>
+                    <%= $page.title %>
                 </h1>
             </div>
             <div class="card-body fs-5">
 
                 <div class="row row-cols-sm-1 row-cols-md-2">
                     <div class="col mb-4 page-content">
-                        <%- page.content %>
+                        <%- $page.$content %>
 
-                        <h3 class="mt-5">Productos de <%= page.metadata.title %></h3>
+                        <h3 class="mt-5">Productos de <%= $page.title %></h3>
 
                         <% 
-                            const productos = (page.metadata.products || []).map(name => site.__productos["__" + name]);
+                            const productos = ($page.products || []).map(name => site.__productos["__" + name]);
                         %>
 
                         <div class="list-group">
                         
                             <% for (const producto of productos) { %>
                                 <div class="list-group-item d-flex justify-content-left border-0 bg-transparent">
-                                    <img src="/<%= producto.directory %>/<%= producto.metadata.image %>"
+                                    <img src="/<%= producto.$path %>/<%= producto.image %>"
                                     style="width:8em;height: 8em;">
                                     <div class="ps-4 pt-3">
-                                        <h4><%= producto.metadata.title %></h4>
-                                        <p class="text-muted fs-6"><%= producto.metadata.description %></p>
-                                        <a class="btn btn-info" href="/<%= producto.directory %>">Muéstrame más &RightArrow;</a>
+                                        <h4><%= producto.title %></h4>
+                                        <p class="text-muted fs-6"><%= producto.description %></p>
+                                        <a class="btn btn-info" href="/<%= producto.$path %>">Muéstrame más &RightArrow;</a>
                                     </div>
                                 </div>
                             
@@ -43,23 +43,23 @@
                     </div>
                     <div class="col">
 
-                        <h3 class="">Equipo de <%= page.metadata.title %></h3>
+                        <h3 class="">Equipo de <%= $page.title %></h3>
 
                         <% 
-                            const team = (page.metadata.team || []).map(name => site.__creadores["__" + name]);
+                            const team = ($page.team || []).map(name => site.__creadores["__" + name]);
                         %>
                         
                         <div class="list-group">
                         
                             <% for (const dev of team) { %>
                                     <div class="list-group-item d-flex justify-content-left border-0 bg-transparent">
-                                        <img src="/<%= dev.directory %>/<%= dev.metadata.image %>" class="rounded-circle"
+                                        <img src="/<%= dev.$path %>/<%= dev.image %>" class="rounded-circle"
                                         style="width:5em;height: 5em;">
                                         <div class="ps-4 pt-3">
-                                            <a href="/<%= dev.directory %>">
-                                                <%= dev.metadata.title %>
+                                            <a href="/<%= dev.$path %>">
+                                                <%= dev.title %>
                                             </a>
-                                            <p class="text-muted fs-6"><%= dev.metadata.description %></p>
+                                            <p class="text-muted fs-6"><%= dev.description %></p>
                                         </div>
                                     </div>
 
