--- a/themes/default/templates/producto-list.ejs
+++ b/themes/default/templates/producto-list.ejs
@@ -1,6 +1,6 @@
 <%- include("_header") %>
 
-    <%- include("../_page") %>
+    <%- include("_page") %>
 
         <br>
 
@@ -8,19 +8,19 @@
 
             <div class="card-group">
 
-                <% page.children.forEach(child=> { %>
+                <% for(const producto of $page.$pages) { %>
 
                     <div class="studio-card card m-2 mb-5 border-0 bg-transparent">
-                        <img src="/<%= child.directory %>/<%= child.metadata.image %>" class="img-fluid">
+                        <img src="/<%= producto.$path %>/<%= producto.image %>" class="img-fluid">
                         <div class="card-body">
-                          <h5 class="card-title"><%= child.metadata.title %></h5>
-                          <p class="card-text"><%= child.metadata.description %></p>
+                          <h5 class="card-title"><%= producto.title %></h5>
+                          <p class="card-text"><%= producto.description %></p>
                         </div>
                         <div class="card-footer bg-transparent border-0">
-                            <a href="/<%= child.directory %>" class="btn btn-primary">Los quiero conocer &RightArrow;</a>
+                            <a href="/<%= producto.$path %>" class="btn btn-info">Muéstrame más &RightArrow;</a>
                         </div>
                       </div>                    
-                <% }); %>
+                <% } %>
             
             </div> <!-- group -->
 
