Se arregla el botón del banner.

--- a/themes/default/templates/home.ejs
+++ b/themes/default/templates/home.ejs
@@ -8,7 +8,7 @@
             <p class="col-md-8 fs-4 text-white">
                 <%= $page.description %>
             </p>
-            <a href="<%= site.call_to_action.url %>" class="btn btn-primary btn-lg" type="button">
+            <a href="<%= site.call_to_action.url %>" class="btn btn-primary btn-lg" role="button">
                 <%= site.call_to_action.label %> &RightArrow;
             </a>
         </div>
