Algunos ajustes de los contactos y enlaces a contribuir.

--- a/themes/default/templates/home.ejs
+++ b/themes/default/templates/home.ejs
@@ -36,6 +36,12 @@
 
         <div class="m-4 p-4"></div>
 
+        <div class="w-100 d-flex justify-content-center">
+            <a href="<%= site.repository %>" class="btn btn-lg btn-primary" target="_blank">
+                <%= site.contribute_message %>
+            </a>
+        </div>
+
         <div class="alert m-5">
             <h2 class="text-center">Últimas Noticias</h2>
         </div>
