Se configura cache de netlify.

--- a/themes/default/templates/_header.ejs
+++ b/themes/default/templates/_header.ejs
@@ -17,14 +17,14 @@
 
     <!-- website-->
     <title><%= title %> </title>
-    <link rel="icon" type="image/x-icon" href="/<%= site.favicon %>">
+    <link rel="icon" type="image/x-icon" href="/_static/<%= site.favicon %>">
 
 
-    <link rel="stylesheet" href="/bootstrap/simplex/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/custom.css">
-    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/_static/bootstrap/simplex/bootstrap.min.css">
+    <link rel="stylesheet" href="/_static/css/custom.css">
+    <link rel="stylesheet" href="/_static/fontawesome/css/all.min.css">
+    <script src="/_static/js/jquery.min.js"></script>
+    <script src="/_static/js/bootstrap.min.js"></script>
 </head>
 
 <body>
