[bugfix] En el perfil de un creador se muestra los estudios a los que pertenece.

--- a/themes/default/templates/creador.ejs
+++ b/themes/default/templates/creador.ejs
@@ -29,7 +29,7 @@
     <div class="container">
         <% 
             const studios = site.__estudios.$pages
-                .filter(s => (s.team ?? []).indexOf($page.name) >= 0);
+                .filter(s => (s.team ?? []).indexOf($page.$name) >= 0);
         %>
 
         <% if (studios.length > 0) { %>
