Se adiciona a Roger.

--- a/themes/default/templates/home.ejs
+++ b/themes/default/templates/home.ejs
@@ -158,14 +158,14 @@
 
 
                 <% 
-                const creadores = site.__creadores.$pages.slice(0, 12); 
+                const creadores = site.__creadores.$pages.slice(0, 4); 
                 %>
 
                 <div class="card-group">
 
                 <% for (const creador of creadores) { %>
 
-                    <div class="card border-0 bg-transparent d-flex text-center" style="width:20em;">
+                    <div class="card border-0 bg-transparent d-flex text-center" style="min-width:12rem;">
 
                         <div class="card-body">
                     
