--- a/themes/default/templates/producto.ejs
+++ b/themes/default/templates/producto.ejs
@@ -6,6 +6,14 @@
             <%= $page.title %>
         </h1>
 
+        <div class="d-flex justify-content-center mb-4">
+            <% for(const tag of $page.tags) { %>
+                <a class="ms-2 text-uppercase" href="/tags/productos/<%= tag %>">
+                    #<%= tag %>
+                </a>
+            <% } %>
+        </div>
+
         <p class="text-muted fs-4">
             <%= $page.description %>
         </p>
