--- a/themes/default/templates/creador.ejs
+++ b/themes/default/templates/creador.ejs
@@ -13,6 +13,15 @@
                 <h1 class="card-title text-center text-primary">
                     <%= $page.title %>
                 </h1>
+
+                <div class="d-flex justify-content-center mb-4">
+                    <% for(const tag of $page.tags) { %>
+                        <a class="ms-2 text-uppercase" href="/tags/creadores/<%= tag %>">
+                            #<%= tag %>
+                        </a>
+                    <% } %>
+                </div>
+
                 <div class="muted-text text-center">
                     <%= $page.description %>
                 </div>
