--- a/themes/default/templates/blog.ejs
+++ b/themes/default/templates/blog.ejs
@@ -1,28 +1,23 @@
 <%- include("_header") %>
 
-    <div class="container-fluid p-5 mb-3">
+    <div class="container">
 
-        <div class="container">
-            <h1 class="display-5 fw-bold text-center">
-                <%= $page.title %>
-            </h1>
-        </div>
-    </div>
-
-    <div class="container text-center">
-        <img class="img-fluid" src="<%= $page.image %>">
-    </div>
-
-    <div class="p-3"></div>
-
-    <div class="container mt-5 page-content">
-
-        <%- $page.$content %>
+        <h1 class="display-5 fw-bold">
+            <%= $page.title %>
+        </h1>
 
         <p class="text-muted">
             <%- include("_date", {date: $page.date})%>
         </p>
 
+        <% if ($page.image) { %>
+            <img class="img-fluid w-100" src="<%= $page.image %>">
+        <% } %>
+    </div>
+
+    <div class="container mt-3 page-content">
+
+        <%- $page.$content %>
     </div>
 
     <%- include("_footer") %>
