Se agregar enlace de retorno desde los tags de los creadores.

--- a/themes/default/templates/tags-creador-list.ejs
+++ b/themes/default/templates/tags-creador-list.ejs
@@ -4,6 +4,10 @@
 
         <div class="container">
 
+            <p>
+                <a href="/creadores">&leftarrow; Regresar</a>
+            </p>
+
             <div class="row">
 
                 <% for(const creadoreName of $page.creadores_names) { 
