--- a/themes/default/templates/_header.ejs
+++ b/themes/default/templates/_header.ejs
@@ -5,26 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- open-graph card -->
-    <% const title = site === $page? site.title : ($page.title + " | " + site.title) %>
-    <meta name="og:title" content="<%= title %>">
-    <meta name="og:description" content="<%= $page.description %>">
-    <meta name="og:image" content="/<%= $page.image? ($page.$path + "/" + $page.image) : site.banner_image %>">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@GameDevCuba">
-    <meta name="twitter:creator" content="@GameDevCuba">
+    <% const title=site===$page? site.title : ($page.title + " | " + site.title) %>
+        <meta name="og:title" content="<%= title %>">
+        <meta name="og:description" content="<%= $page.description %>">
+        <meta name="og:image" content="/<%= $page.image? ($page.$path + " /" + $page.image) : site.banner_image %>">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@GameDevCuba">
+        <meta name="twitter:creator" content="@GameDevCuba">
 
-    <!-- website-->
-    <title><%= title %> </title>
-    <link rel="icon" type="image/x-icon" href="/_static/<%= site.favicon %>">
+        <!-- website-->
+        <title>
+            <%= title %>
+        </title>
+        <link rel="icon" type="image/x-icon" href="/_static/<%= site.favicon %>">
 
 
-    <link rel="stylesheet" href="/_static/bootstrap/simplex/bootstrap.min.css">
-    <link rel="stylesheet" href="/_static/css/custom.css">
-    <link rel="stylesheet" href="/_static/fontawesome/css/all.min.css">
-    <script src="/_static/js/jquery.min.js"></script>
-    <script src="/_static/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/_static/bootstrap/simplex/bootstrap.min.css">
+        <link rel="stylesheet" href="/_static/css/custom.css">
+        <link rel="stylesheet" href="/_static/fontawesome/css/all.min.css">
+        <script src="/_static/js/jquery.min.js"></script>
+        <script src="/_static/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -32,10 +34,11 @@
     <nav class="navbar navbar-expand-lg border-0 navbar-light text-primary">
         <div class="container-fluid">
             <a class="navbar-brand text-primary" href="/">
-                <img src="<%= site.$path %>/<%= site.logo_image %>" alt="" height="30" class="d-inline-block align-text-top">
+                <img src="<%= site.$path %>/<%= site.logo_image %>" alt="" height="30"
+                    class="d-inline-block align-text-top">
                 <%= site.short_title %>
-              </a>
-            
+            </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -44,19 +47,47 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    
-                    <% for(const pageName of site.menu_pages) { 
-                        const menuPage = site.$pages.find(p => p.$name === pageName);
-                    %>
+
+                    <% for(const pageName of site.menu_pages) { const menuPage=site.$pages.find(p=> p.$name ===
+                        pageName);
+                        %>
                         <li class="nav-item">
                             <a class="nav-link text-primary" aria-current="page" href="/<%= menuPage.$path %>">
                                 <%= menuPage.title %>
                             </a>
                         </li>
-                    <% } %>
+                        <% } %>
 
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- fork me -->
+    <div class="github-corner"><a href="http://github.com/GameDev-Cuba/creadores-cubanos-videojuegos-website"
+            title="Fork me on GitHub"><svg viewbox="0 0 100 100" fill="currentColor">
+                <title>Fork me on GitHub</title>
+                <path
+                    d="M0 0v100h100V0H0zm60 70.2h.2c1 2.7.3 4.7 0 5.2 1.4 1.4 2 3 2 5.2 0 7.4-4.4 9-8.7 9.5.7.7 1.3 2 1.3 3.7V99c0 .5 1.4 1 1.4 1H44s1.2-.5 1.2-1v-3.8c-3.5 1.4-5.2-.8-5.2-.8-1.5-2-3-2-3-2-2-.5-.2-1-.2-1 2-.7 3.5.8 3.5.8 2 1.7 4 1 5 .3.2-1.2.7-2 1.2-2.4-4.3-.4-8.8-2-8.8-9.4 0-2 .7-4 2-5.2-.2-.5-1-2.5.2-5 0 0 1.5-.6 5.2 1.8 1.5-.4 3.2-.6 4.8-.6 1.6 0 3.3.2 4.8.7 2.8-2 4.4-2 5-2z">
+                </path>
+            </svg></a></div>
+    <style>
+        .github-corner {
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 120px;
+            height: 120px;
+            overflow: hidden;
+        }
+
+        .github-corner a {
+            position: absolute;
+            right: 0;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            transform: translate(50%, -50%) rotate(45deg);
+            color: #e32400;
+        }
+    </style>
