Se arregla listad de productos en vista de estudio.

--- a/themes/default/templates/estudio.ejs
+++ b/themes/default/templates/estudio.ejs
@@ -20,7 +20,7 @@
                         <h3 class="mt-5">Productos de <%= $page.title %></h3>
 
                         <% 
-                            const productos = ($page.prodcutos || []).map(name => site.__productos["__" + name]);
+                            const productos = ($page.products || []).map(name => site.__productos["__" + name]);
                         %>
 
                         <div class="list-group">
